# purplechain

./: .ghci  .gitignore  LICENSE  Makefile  README.md  default.nix  docker-compose.yml  make  make.nix  project.nix  purplechain.cabal  shell.nix  tmux
.github/workflows/: test.yml
purplechain/: purplechain.cabal
purplechain/src/: Purplechain.hs  Tendermint.hs
purplechain/src-bin/: Main.hs
purplechain/src/Purplechain/: Application.hs  Client.hs  Module.hs  Network.hs  Node.hs
purplechain/src/Purplechain/Module/: Keeper.hs  Message.hs  Router.hs  Types.hs
purplechain/src/Tendermint/: Config.hs
scripts/: hoogle  repl  test  watch
src/: Purplechain.hs  Tendermint.hs
src-bin/: Main.hs
src/Purplechain/Module/: Keeper.hs  Message.hs  Query.hs  Storage.hs  Types.hs
