cabal-version:       >=1.10
name:                purplechain
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
--author:
--maintainer:
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13
                     , aeson
                     , ansi-terminal
                     , ansi-wl-pprint
                     , async
                     , bytestring
                     , colour
                     , conduit-extra
                     , containers
                     , data-default-class
                     , errors
                     , hs-abci-extra
                     , hs-abci-sdk
                     , hs-abci-server
                     , hs-abci-test-utils
                     , hs-abci-types
                     , hs-iavl-client
                     , hs-tendermint-client
                     , lens
                     , mkrfuzz
                     , modern-uri
                     , mtl
                     , polysemy
                     , pretty
                     , proto3-suite
                     , servant
                     , shelly
                     , string-conversions
                     , text
                     , tomland
                     , tree-diff
                     , which

  exposed-modules:     Purplechain
                       Purplechain.Application
                       Purplechain.Client
                       Purplechain.Module
                       Purplechain.Module.Keeper
                       Purplechain.Module.Message
                       Purplechain.Module.Router
                       Purplechain.Module.Query
                       Purplechain.Module.Types
                       Purplechain.Network
                       Purplechain.Node
                       Tendermint
                       Tendermint.Config
  ghc-options:         -Wall

executable purplechain
  main-is:             Main.hs
  hs-source-dirs:      src-bin
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13
                     , purplechain
